# cmake-capstone-template

./: README.md
source/: CMakeLists.txt  test1.c
